modification of the structure and implementation of the receiving service