@@ -1,18 +1,17 @@
 package com.relatech.warehouse_management_system.goodsIn.entity.mapper;
 
-import com.relatech.warehouse_management_system.goodsIn.entity.dto.GrnItemDto;
+import com.relatech.warehouse_management_system.goodsIn.dto.GrnItemDto;
 import com.relatech.warehouse_management_system.goodsIn.entity.GrnItem;
+import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.List;
 
+@Component
 public class GrnItemMapper {
 
-    public static GrnItemDto toDto(GrnItem grnItem) {
-        if (grnItem == null) {
-            return null;
-        }
 
+    public GrnItemDto toDto(GrnItem grnItem) {
+        if (grnItem == null) return null;
         return GrnItemDto.builder()
                 .id(grnItem.getId())
                 .code(grnItem.getCode())
@@ -22,41 +21,37 @@ public class GrnItemMapper {
                 .compliantQty(grnItem.getCompliantQty())
                 .notCompliantQty(grnItem.getNotCompliantQty())
                 .state(grnItem.getState())
+                .checkingInfoList(grnItem.getCheckingInfoList())
                 .build();
     }
 
-    public static GrnItem toEntity(GrnItemDto grnItemDto) {
-        if (grnItemDto == null) {
-            return null;
-        }
 
-        GrnItem grnItem = new GrnItem();
-        grnItem.setId(grnItemDto.getId());
-        grnItem.setCode(grnItemDto.getCode());
-        grnItem.setProductCode(grnItemDto.getProductCode());
-        grnItem.setExpectedQty(grnItemDto.getExpectedQty());
-        grnItem.setReceivedQty(grnItemDto.getReceivedQty());
-        grnItem.setCompliantQty(grnItemDto.getCompliantQty());
-        grnItem.setNotCompliantQty(grnItemDto.getNotCompliantQty());
-        grnItem.setState(grnItemDto.getState());
-        grnItem.setCheckingInfoList(grnItemDto.getCheckingInfoList());
-
-        return grnItem;
+    public GrnItem toEntity(GrnItemDto dto) {
+        if (dto == null) return null;
+        return GrnItem.builder()
+                .id(dto.getId())
+                .code(dto.getCode())
+                .productCode(dto.getProductCode())
+                .expectedQty(dto.getExpectedQty())
+                .receivedQty(dto.getReceivedQty())
+                .compliantQty(dto.getCompliantQty())
+                .notCompliantQty(dto.getNotCompliantQty())
+                .state(dto.getState())
+                .build();
     }
 
-    public static List<GrnItemDto> toDto(List<GrnItem> entities) {
-        if (entities == null || entities.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return entities.stream()
-                .map(GrnItemMapper::toDto).toList();
+
+    public List<GrnItemDto> toDto(List<GrnItem> entities) {
+        if (entities == null || entities.isEmpty()) return List.of();
+        return entities.stream().map(this::toDto).toList();
     }
 
-    public static List<GrnItem> toEntity(List<GrnItemDto> dtos) {
-        if (dtos == null || dtos.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return dtos.stream()
-                .map(GrnItemMapper::toEntity).toList();
+    public List<GrnItem> toEntity(List<GrnItemDto> dtos) {
+        if (dtos == null || dtos.isEmpty()) return List.of();
+        return dtos.stream().map(this::toEntity).toList();
     }
+
+    // STATICI opzionali (retrocompatibilità)
+    public static GrnItemDto toDtoStatic(GrnItem grnItem) { return new GrnItemMapper().toDto(grnItem); }
+    public static GrnItem toEntityStatic(GrnItemDto dto) { return new GrnItemMapper().toEntity(dto); }
 }
